# olcGimmeHead

./: .gitignore  CMakeLists.txt  README.md
msvc/: olcGimmeHead.sln  olcGimmeHead.vcxproj  olcGimmeHead.vcxproj.filters
src_cpp/: gimme-head.cpp
